# IF2A-exos

./: CMakeLists.txt  README.md  cinq_deux.c  cm_deux.c  decla_exos.h  dix_deux.c  dix_six.c  exos.md  huit_cinq.c  huit_deux.c  huit_quatre.c  huit_trois.c  huit_un.c  main.c  sept_deux.c  sept_quatre.c  sept_trois.c  sept_un.c  six_cinq.c  six_huit.c  six_quatre.c  six_sept.c  six_six.c  six_trois.c
