cmake_minimum_required(VERSION 3.26)
project(test_project C)

set(CMAKE_C_STANDARD 11)

add_executable(test_project main.c
        cinq_deux.c
        decla_exos.h
        six_trois.c
        six_quatre.c
        six_cinq.c
        six_six.c
        six_sept.c
        six_huit.c
        cm_deux.c
        sept_un.c
        sept_deux.c
        sept_trois.c
        sept_quatre.c
        huit_un.c
        huit_deux.c
        huit_trois.c
        huit_quatre.c
        huit_cinq.c
        dix_deux.c
        dix_six.c
)
